front-end-dev/take-home-project-2/style.css
@import url("whitespace-reset.css");

* {
  box-sizing: border-box;
}

html, body {
  font: normal 16px Helvetica, Arial, sans-serif;
  font-weight: 400;
  letter-spacing: 1px;
  max-width: 1200px;
  height: 818px;
  color: #b2b5c3;
}

h1 {
  font-size: 21px;
  font-weight: inherit;
}

a {
  text-decoration: none;
  color: inherit;
}

header {
  width: 335px;
  height: 100%;
  float: left;
  background: #464f77;
  z-index: 2;
}

nav ul {
  padding-top: 60px;
}

nav ul li:first-of-type {
  color: #ffffff;
}

nav li {
  position: relative;
  display: table;
  text-align: center;
  height: 40px;
  width: 100%;
}

nav li.selected {
  background: #383f5f;
  color: #ffffff;
}

nav li a {
  display: table-cell;
  vertical-align: middle;
}

nav li a img {
  display: inline;
  padding-right: 10px;
  vertical-align: middle;
}

nav span {
  display: table-cell;
  position: absolute;
  text-align: center;
  right: 35px;
  top: 10px;
  width: 18px;
  height: 18px;
  line-height: 18px;
  border-radius: 50%;
  background: #6b7292;
  color: #b2b5c3;
  font-size: 14px;
  padding: 0;
}

li.selected span {
  background: #148fd5;
  border: 1px solid #148fd5;
  color: #ffffff;
}

ul#completed li + li {
  text-decoration: line-through;
}

main {
  position: relative;
  width: auto;
  height: 100%;
  overflow: hidden;
  color: #050505;
  padding: 60px 100px 0 20px;
  z-index: 2;
}

main h1 span {
  position: relative;
  display: inline-block;
  left: 18px;
  bottom: 2px;
  height: 18px;
  width: 18px;
  line-height: 18px;
  background: #148fd5;
  border-radius: 50%;
  color: #ffffff;
  font-size: 14px;
  text-align: center;
  vertical-align: middle;
}

main li {
  width: 100%;
  padding: 16px 0 16px 10px;
  border-top: 1px solid #e7e7e7;
}

main li:first-of-type,
main li:nth-of-type(2) {
  border-style: none;
}

main li:first-of-type {
  padding-top: 8px;
  padding-bottom: 17px;
}

main li label {
  padding-left: 12px;
  cursor: pointer;
}

main li a {
  color: #3498d8;
  padding-left: 15px;
}

main form {
  display: inline-block;
}

main li form:last-of-type {
  float: right;
}

span.mycheckbox {
  content: "";
  width: 15px;
  height: 15px;
  display: inline-block;
  vertical-align: middle;
  background: transparent url("images/unchecked-box.png") no-repeat;
}

main input[type="checkbox"]:checked + span.mycheckbox {
  background: transparent url("images/checked-box.png") no-repeat;
}

main input[type="checkbox"]:checked ~ label {
  color: #cecece;
  text-decoration: line-through;
}

main li + li label:hover {
  color: #3498d8;
}

main li:nth-of-type(2) ~ li button {
  background: transparent url("images/trash-bin.png") no-repeat;
  border: none;
  width: 17px;
  height: 17px;
  background-position: 50% 50%;
}

main li button span,
main input[type="checkbox"]  {
  display: none;
}

main li:nth-of-type(2) label img {
  padding-right: 8px;
}

main li:nth-of-type(2) label {
  padding-left: 0;
  color: #148fd5;
}

main li:nth-of-type(2) input[type="checkbox"]:checked ~ form#new-todo {
  visibility: visible;
}

main li:nth-of-type(2) input[type="checkbox"]:checked ~ label {
  color: #148fd5;
  text-decoration: none;
}

/*main li:nth-of-type(2) input[type="checkbox"]:checked ~ form#new-todo:before {
  position: fixed;
  content: "";
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: rgba(0, 0, 0, 0.4);
  z-index: 1;
}*/

main li:nth-of-type(2) input ~ form#new-todo {
  visibility: hidden;
}

form#new-todo {
  position: absolute;
  top: 107px;
  left: 105px;
  width: 575px;
  height: 400px;
  padding-left: 30px;
  padding-top: 36px;
  padding-right: 40px;
  background: #ffffff;
  border: 1px solid #ffffff;
  z-index: 3;
}

form#new-todo dl {
  margin: 0;
  margin-bottom: 24px;
}

form#new-todo dt,
form#new-todo dd {
  display: inline-block;
}

form#new-todo dt {
  width: 90px;
  height: 36px;
  text-align: left;
  vertical-align: top;
  padding-top: 10px;
  margin: 0;
  padding-left: 0;
}

form#new-todo label {
  font-weight: 400;
  color: #060606;
  padding: 0;
}

form#new-todo input,
form#new-todo textarea {
  font-size: 16px;
  border: 1px solid #b3b3b3;
}

form#new-todo button {
  width: 182px;
  height: 34px;
  font-size: 16px;
  background: #148fd5;
  color: #ffffff;
  border: 1px solid #148fd5;
  border-radius: 4px;
  margin-right: 18px;
}

form#new-todo textarea {
  font: normal 16px Helvetica, Arial, sans-serif;
  resize: none;
  width: 396px;
  height: 144px;
  padding: 8px;
}

form#new-todo input[id="title"] {
  width: 396px;
  height: 36px;
  padding: 8px;
}

form#new-todo input[id="due-date"] {
  width: 116px;
  height: 36px;
  padding: 8px;
}

form#new-todo span {
  display: inline-block;
  width: 13px;
  text-align: center;
}

body > label {
  display: none;
  padding-top: 20px;
  padding-left: 30px;
}

body > input[id="panel-toggle"] {
  display: none;
}

body > label {
  cursor: pointer;
}

@media (max-width: 768px) {
  html, body {
    min-width: 480px;
  }

  header {
    display: none;
  }

  body > label[for="panel-toggle"] {
    display: inline-block;
  }

  body > input[id="panel-toggle"]:checked + header {
    display: block;
    cursor: pointer;
  }

  main {
    padding-top: 18px;
  }
}

